# cyclic-equivariant-cnn

./: .gitignore  README.md  main.py  make_datasets.py  pyproject.toml  test.py
notebooks/: C4.ipynb  D4.ipynb  EDA.ipynb  EDA2.ipynb  train_dl.ipynb
src/: C4.py  D4.py  __init__.py
src/cyclic_operations/: C4.py  D4.py  __init__.py
src/models/: C4_CNN.py  CNN.py  ConvBlock.py  D4_CNN.py
src/utils/: Accuracy.py  MNIST_Dataset.py  Trainer.py
